fix unchecked assigment